[metadata]
name = concurrently
# version = < see setup.py >
description = Library helps easy write concurrent executed code blocks
long_description = file: README.rst
url = https://github.com/sirkonst/concurrently
author = Konstantin Enchant
author-email = sirkonst@gmail.com
maintainer = Konstantin Enchant
maintainer_email = sirkonst@gmail.com
keywords = concurrent, thread, threading, process, multiprocessing, asyncio, gevent
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Natural Language :: Russian
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.5
packages = find: concurrently
install_requires =
    typing; python_version <= "3.5"

[options.extras_require]
gevent =
    gevent
develop =
    tox
    pytest
    pytest-asyncio
    coverage
    Sphinx
    gevent
