[metadata]
name = concurrently
# version = < see setup.py >
description = Library helps easy write concurrent executed code blocks
long_description = file: README.rst
url = https://github.com/sirkonst/concurrently
author = Konstantin Enchant
author-email = sirkonst@gmail.com
maintainer = Konstantin Enchant
maintainer_email = sirkonst@gmail.com
keywords = concurrent, thread, threading, process, multiprocessing, asyncio, gevent
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Natural Language :: Russian
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.5
packages = find:

[options.extras_require]
gevent =
    gevent; python_version < "3.8"
    gevent>=1.5a2; python_version >= "3.8"
develop =
    wheel
    twine
    tox
    pytest
    pytest-asyncio
    pylava
    coverage
    Sphinx
