[metadata]
name = concurrently
# version = < see setup.py >
description = Library helps easy write concurrent executed code blocks
long_description = file: README.rst
url = https://github.com/sirkonst/concurrently
author = Konstantin Enchant
author_email = sirkonst@gmail.com
maintainer = Konstantin Enchant
maintainer_email = sirkonst@gmail.com
keywords = concurrent, thread, threading, process, multiprocessing, asyncio, gevent
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Natural Language :: Russian
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.5
packages = find:

[options.extras_require]
gevent =
    gevent; python_version < "3.8"
    gevent>=1.5a2; python_version >= "3.8"
develop =
    mypy~=1.4; python_version < "3.8"
    mypy~=1.5; python_version >= "3.8"
    wheel~=0.41
    twine~=4.0
    tox~=3.28; python_version < "3.8"
    tox~=4.11; python_version >= "3.8"
    pytest~=7.4
    pytest-asyncio~=0.21
    pylama~=8.4
    coverage~=6.2; python_version < "3.8"
    coverage~=7.3; python_version >= "3.8"
    Sphinx~=5.3; python_version < "3.9"
    Sphinx~=7.2; python_version >= "3.9"
